...
                android:layout_marginLeft="8dp" />

            <ImageButton
                android:id="@+id/modify_event_btn_pick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/button2"
                android:background="@android:color/white"
                app:srcCompat="@drawable/choose_pic"
                app:layout_constraintLeft_toRightOf="@+id/modify_event_btn_take_photo"
                android:layout_marginLeft="8dp"
                app:layout_constraintRight_toLeftOf="@+id/button2"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="onEventPickImage"
                app:layout_constraintBottom_toTopOf="@+id/modify_event_btn_delete" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/modify_event_edit_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
...
